--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="style.css">
     <title>演習問題9</title>
   </head>
