--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" href="style.css">
-    <title>演習問題9</title>
+    <title>課題問題1</title>
   </head>
   <body>
     <header></header>
@@ -14,33 +14,21 @@
         <span class="step">step1</span>
         <div class="img1"></div>
         <h3 class="title">タイトルが入ります</h3>
-        <p class="text">文章が入ります。文章が入ります。文<br>
-          章が入ります。文章が入ります。文章<br>
-          が入ります。文章が入ります。文章が<br>
-          入ります。文章が入ります。文章が入<br>
-          ります。</p>
+        <p class="text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
       </section>
 
       <section class="box">
         <span class="step">step2</span>
         <div class="img2"></div>
         <h3 class="title">タイトルが入ります</h3>
-        <p class="text">文章が入ります。文章が入ります。文<br>
-          章が入ります。文章が入ります。文章<br>
-          が入ります。文章が入ります。文章が<br>
-          入ります。文章が入ります。文章が入<br>
-          ります。</p>
+        <p class="text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
       </section>
 
       <section class="box">
         <span class="step">step3</span>
         <div class="img3"></div>
         <h3 class="title">タイトルが入ります</h3>
-        <p class="text">文章が入ります。文章が入ります。文<br>
-          章が入ります。文章が入ります。文章<br>
-          が入ります。文章が入ります。文章が<br>
-          入ります。文章が入ります。文章が入<br>
-          ります。</p>
+        <p class="text">文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。文章が入ります。</p>
       </section>
     </main>
 
